# saas-ops-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 15e27e3118c2_initial_tables.py
app/core/: config.py
app/db/: session.py
app/db/models/: report.py  thread.py  ticket.py
